c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_member_no_type.c
struct s {
    a;  // each structure member declaration must specify a type
};